# unsafe-dispositional-typing

./: .dockerignore  .gitignore  CITATION.cf  CITATION.cff  Dockerfile  LICENSE  Makefile  README.md  debug_build.sh  dispositional_analysis.csv  docker-compose.yml  docker-run.sh  empirical_results_summary.txt  full_output.txt  pass_output.txt  reorganize_project.sh  setup_docker.sh
data/scalability/: analysis_report.txt  tikz_coordinates.txt  timing_data.csv
docs/paper/: Dispositional_Typing.tex  Dispositional_Typing_anonymous.tex  README.md  moore2025_dispositional_typing_submitted.pdf:Zone.Identifier
docs/reproduction/: DOCKER_SETUP.md  README.md
plugin/: CMakeLists.txt  DispositionalPass.cpp
results/: dispositional_analysis.csv
scripts/: build_llvm.sh  create_project_structure.sh  driver.sh  fetch_llvm.sh  requirements.txt  zenodo_analysis.sh
scripts/analysis/scalability/: scalability_analysis.py
scripts/benchmarks/: fetch_llvm.sh
scripts/output/: analysis_report.txt
tools/clang-plugin/: DispositionalPass.cpp
